# src/main/java/droni/backend/api/article/dto/ArticleTarget.java
@@ -3,5 +3,5 @@ package droni.backend.api.article.dto;
 public enum ArticleTarget {
     ALL,
     USER,
-    TARGET
+    EXPERT
 }
