# src/main/java/droni/backend/api/article/repository/ArticleRepository.java
@@ -1,0 +1,14 @@
+package droni.backend.api.article.repository;
+
+import droni.backend.api.article.dto.ArticleKind;
+import droni.backend.api.article.dto.ArticleTarget;
+import droni.backend.api.article.entity.Article;
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.stereotype.Repository;
+
+import java.util.List;
+
+@Repository
+public interface ArticleRepository extends JpaRepository<Article, Long> , ArticleQuerydslRepo{
+
+}
